--- a/Traveller.UI/Pages/Shared/_Layout2.cshtml
+++ b/Traveller.UI/Pages/Shared/_Layout2.cshtml
@@ -169,21 +169,6 @@
 
                 <!-- End of Topbar -->
                 <div class="container-fluid" id="LayoutContainerFluid">
-                    @*<main role="main" class="pb-3">*@
-                    @*<div class="inner_container"></div>
-                    <div class="sec_head">
-                    <div class="row align-items-center">
-                    <div class="col">
-                    <div class="main-heading mb-0 pb-2">Traveler</div>
-                    </div>
-                    <div class="col-auto">
-                    <div class="nav nav-tabs content_view_type" id="nav-tab" role="tablist">
-                    <a data-toggle="tab" href="#tab1" role="tab" aria-selected="true" class="active"><i class="fas fa-th-list"></i></a>
-                    <a data-toggle="tab" href="#tab2" role="tab" aria-selected="false"><i class="fas fa-dot-circle"></i></a>
-                    </div>
-                    </div>
-                    </div>
-                    </div>*@
                     @RenderBody()
                     @*</main>*@
                 </div>
@@ -192,7 +177,7 @@
             <!-- Footer -->
             @* <footer class="sticky-footer bg-white">
                 <div class="container my-auto">
-                    <div class="copyright text-center my-auto"> <span>Copyright © 2023 Systel. All rights reserved.</span> </div>
+                    <div class="copyright text-center my-auto"> <span>Copyright © 2024 VNC. All rights reserved.</span> </div>
                 </div>
             </footer> *@
             <!-- End of Footer -->
