--- a/Traveller.UI/Pages/Shared/_Layout.cshtml
+++ b/Traveller.UI/Pages/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Traveler</title>
+    <title>@ViewData["Title"] - VNC</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Traveller.UI.styles.css" asp-append-version="true" />
