--- a/AngularClient/src/app/Common/navbar/navbar.component.html
+++ b/AngularClient/src/app/Common/navbar/navbar.component.html
@@ -68,8 +68,8 @@
                 </a>
 
                 <!-- Sidebar Toggle (Topbar) -->
-                <button id="sidebarToggleTop" class="btn btn-link d-md-none rounded-circle mr-3"> <i
-                        class="fa fa-bars"></i> </button>
+                <button id="sidebarToggleTop" class="btn btn-link d-md-none rounded-circle mr-3"> 
+                    <i class="fa fa-bars"></i> </button>
 
                 <!-- Topbar Search -->
                 <form class="d-none d-sm-inline-block form-inline m-auto my-2 my-md-0  navbar-search main_search">
@@ -193,7 +193,7 @@
                                 <a href="#" class="btn btn-outline-secondary rounded-pill px-3" (click)="Logout()">
                                     Logout </a>
                                 <div class="dropdown-divider"></div> 
-                                <a href="#" class="dropdown-item" id="AppVersionA">{{AppVersion}}</a>
+                                <a href="#" class="dropdown-item" id="AppVersionA"></a>
                                 <a href="#" class="dropdown-item" id="LayoutNumber" style="display:none;">L2</a>
                             </div>
                         </div>
