--- a/AngularClient/src/app/shared/color-table/color-table.component.html
+++ b/AngularClient/src/app/shared/color-table/color-table.component.html
@@ -1,5 +1,5 @@
 <div>
-    <table datatable class="row-border hover table table-bordered com_table" style="width: 100%;">
+    <table class="row-border hover table table-bordered com_table" style="width: 100%;">
         <thead>
             <tr class="text-dark" style="border-left: 5px solid var(--orange-col);">
                 <th scope="col">SrNo</th>
