--- a/AngularClient/src/app/Common/user/user/user.component.html
+++ b/AngularClient/src/app/Common/user/user/user.component.html
@@ -3,27 +3,22 @@
     <button type="button" class="btn btn-primary btn-sm" (click)="createNewUser()"> Create
         New</button>
 </div>
-<table datatable  class="row-border hover table table-bordered com_table">
-    <thead>
-        <tr class="text-dark">
-            <th style="border-left: 5px solid var(--orange-col);" scope="col">SrNo</th>
-            <th scope="col">Name</th>
-            <th scope="col">Company</th>
-            <th scope="col">Designation</th>
-            <th scope="col">Phone</th>
-            <th scope="col">Email</th>
-            <th scope="col">Username</th>
-            <th scope="col">CreatedBy</th>
-            <th scope="col">User Roles</th>
-            <th scope="col">Active</th>
-            <th scope="col">Action</th>
-        </tr>
-    </thead>
-    <tbody #userlist>
 
-            
-    </tbody>
-</table>
+<app-color-datatable [columns]="[
+{colName:'Name',colData:'Name'}, 
+{colName:'Company',colData:'Company'},
+{colName:'Designation',colData:'Designation'},
+{colName:'Phone',colData:'Phone'},
+{colName:'Email',colData:'Email'},    
+{colName:'Username',colData:'Username'},
+{colName:'CreatedBy',colData:'CreatedBy'},
+{colName:'User Roles',colData:'AssignedRoles'},
+]"
+[tableData]="filteredUsers" [enableCheckboxColumn]="true" [checkboxStateBinding]="'Active'"
+[checkboxColumnLabel]="'Active'" (checkboxChange)="onCheckboxStatusChange($event)" [enableActionColumn]="true"
+[actionColumnLabel]="'Action'"
+[actionOptions]="[{actionName:'Edit',actionIcon:'fa fa-edit'},{actionName:'Delete',actionIcon:'fa fa-trash'},{actionName:'Assign Role',actionIcon:'fa fa-plus'}]"
+(actionClick)="handleActionClick($event)"></app-color-datatable>
 
 
 
