--- a/AngularClient/src/app/Common/navbar/navbar.component.html
+++ b/AngularClient/src/app/Common/navbar/navbar.component.html
@@ -203,5 +203,5 @@
 <!-- End of Page Wrapper -->
 <!-- Scroll to Top Button-->
 <a class="scroll-to-top rounded-circle" href="#page-top"> <i class="fas fa-angle-up"></i> </a>
-<app-loader></app-loader>
+<!-- <app-loader></app-loader> -->
 
