--- a/AngularClient/src/app/shared/rich-text-editor/rich-text-editor.component.html
+++ b/AngularClient/src/app/shared/rich-text-editor/rich-text-editor.component.html
@@ -1,3 +1,7 @@
-<div id="TemplateInstEditor">
+<div id="rteEditor" (keyup)="onSubmit()">
     This is the default text.
 </div>
+
+<button class="btn btn-sm btn-primary" (click)="onSubmit()">
+    Submit
+</button>
