--- a/AngularClient/src/app/shared/color-datatable/color-datatable.component.html
+++ b/AngularClient/src/app/shared/color-datatable/color-datatable.component.html
@@ -1,78 +1,85 @@
 
   <div class="custom-right my-2" >
-    <label> Show
-      <select name="example_length" (change)="onPageSizeChanged($event)" class="dropdown-toggle">
+    <label> 
+      Show
+      <select name="example_length" (change)="onPageSizeChanged($event)" class="dropdown-toggle from-control form-control-sm">
         <option>10</option>
         <option>25</option>
         <option>50</option>
         <option>100</option>
         <option value=1000>ALL</option>
-      </select> entries
+      </select> 
+      entries
     </label>
+    <button class="btn btn-sm btn-outline-success" (click)="generatePDF()">Export <i class="bi bi-filetype-pdf"></i></button>
+    <!-- parent.component.html -->
+  <app-pdf-generator [pdfFileName]="'generated-pdf'" [data]="tableData" [columns]="columns"></app-pdf-generator>
+
   </div>
-
-  <table class="table table-bordered com_table  mb-0" style="width: 100%;">
-      <thead>
-          <tr class="text-dark" style="border-left: 5px solid var(--orange-col);">
-              <th scope="col">SrNo</th>
-           
-              <th scope="col" *ngFor="let col of columns" (click)="sortData(col.colData)">
-                {{ col.colName }}
-                <span *ngIf="sortingColumn !== col.colData" style="color:#a5a5a5">▲▼</span>
-                <span *ngIf="sortingColumn === col.colData && sortingOrder === 'asc'">▲</span>
-                <span *ngIf="sortingColumn === col.colData && sortingOrder === 'desc'">▼</span>
-              </th>
-
-              <th *ngIf="enableCheckboxColumn">{{ checkboxColumnLabel }}</th>
-              <th *ngIf="enableActionColumn" class ="text-center">{{ actionColumnLabel }}</th>
-          </tr>
-      </thead>
-      <tbody id="TemplateListBody">
-          <ng-container *ngIf="tableData; else noData">
-
-              <tr *ngFor="let rows of filteredData; let i = index" [style.border-left]="'5px solid #' + WCColors[i % WCColors.length]">
-
-                  <td>{{ (currentPage - 1) * selectedPageSize + i + 1 }}</td>
-                  <td *ngFor="let col of columns">
-                      <div [ngClass]="enableBadge===col.colName? 'badge badge-secondary font-l':''"
-                      [style.background-color]="enableBadge===col.colName? '#' + WCColors[i % WCColors.length]:''">{{ rows[col.colData] }}</div>
-                  </td>
-                  <td *ngIf="enableCheckboxColumn" class="text-center">
-                      <input type="checkbox" [(ngModel)]="rows[checkboxStateBinding]" (change)="onCheckboxChange(rows)" [checked]="rows[checkboxStateBinding]===1" />
-                  </td>
-                  <td class="text-center" *ngIf="enableActionColumn">
-                      <div class="btn-group dots_dropdown">
-                          <button type="button" class="dropdown-toggle" data-toggle="dropdown" data-display="static" aria-haspopup="true" aria-expanded="false">
-                            <i class="fa fa-ellipsis-v"></i>
-                          </button>
-                          <div class="dropdown-menu dropdown-menu-right shadow-lg" >
-                            <button class="dropdown-item" type="button" *ngFor="let option of actionOptions" (click)="actionButtonClick(option.actionName,rows)">
-                              <i [ngClass]="option.actionIcon"></i> {{option.actionName}}
+  <div *ngIf="!loading; else skeletonLoader">
+    <table class="table table-bordered com_table  mb-0" style="width: 100%;" id="dataTable">
+        <thead>
+            <tr class="text-dark" style="border-left: 5px solid var(--orange-col);">
+                <th scope="col">SrNo</th>
+             
+                <th scope="col" *ngFor="let col of columns" (click)="sortData(col.colData)" style="cursor: pointer;">
+                  {{ col.colName }}
+                  <span *ngIf="sortingColumn !== col.colData" style="color:#a5a5a5">▲▼</span>
+                  <span *ngIf="sortingColumn === col.colData && sortingOrder === 'asc'">▲</span>
+                  <span *ngIf="sortingColumn === col.colData && sortingOrder === 'desc'">▼</span>
+                </th>
+  
+                <th *ngIf="enableCheckboxColumn">{{ checkboxColumnLabel }}</th>
+                <th *ngIf="enableActionColumn" class ="text-center">{{ actionColumnLabel }}</th>
+            </tr>
+        </thead>
+        <tbody id="TemplateListBody">
+            <ng-container *ngIf="tableData.length > 0; else noData">
+  
+                <tr *ngFor="let rows of filteredData; let i = index" [style.border-left]="'5px solid #' + WCColors[i % WCColors.length]">
+  
+                    <td>{{ (currentPage - 1) * selectedPageSize + i + 1 }}</td>
+                    <td *ngFor="let col of columns">
+                        <div [ngClass]="enableBadge===col.colName? 'badge badge-secondary font-l':''"
+                        [style.background-color]="enableBadge===col.colName? '#' + WCColors[i % WCColors.length]:''">{{ col.enableCurrency ? (isNumber(rows[col.colData]) ? (rows[col.colData] | currency) : rows[col.colData]) : (col.isDate ? (rows[col.colData] | date) : rows[col.colData]) || rows[col.colData]  }}</div>
+                    </td>
+                    <td *ngIf="enableCheckboxColumn" class="text-center">
+                        <input type="checkbox" [(ngModel)]="rows[checkboxStateBinding]" (change)="onCheckboxChange(rows)" [checked]="rows[checkboxStateBinding]===1" />
+                    </td>
+                    <td class="text-center" *ngIf="enableActionColumn">
+                        <div class="btn-group dots_dropdown">
+                            <button type="button" class="dropdown-toggle" data-toggle="dropdown" data-display="static" aria-haspopup="true" aria-expanded="false">
+                              <i class="fa fa-ellipsis-v"></i>
                             </button>
-                          
+                            <div class="dropdown-menu dropdown-menu-right shadow-lg" >
+                              <button class="dropdown-item" type="button" *ngFor="let option of actionOptions" (click)="actionButtonClick(option.actionName,rows)">
+                                <i [ngClass]="option.actionIcon"></i> {{option.actionName}}
+                              </button>
                             
+                              
+                            </div>
                           </div>
-                        </div>
-                  </td>
-
-
-
-              </tr>
-
-          </ng-container>
-
-
-          <ng-template #noData>
-              <tr>
-                  <td colspan="7">
-                      <font style="color:red;">No Records found..</font>
-                  </td>
-              </tr>
-          </ng-template>
-
-
-      </tbody>
-  </table>
+                    </td>
+  
+  
+  
+                </tr>
+  
+            </ng-container>
+  
+  
+            <ng-template #noData>
+                <tr>
+                    <td colspan="7">
+                        <font style="color:red;">No Records found..</font>
+                    </td>
+                </tr>
+            </ng-template>
+  
+  
+        </tbody>
+    </table>
+  </div>
 
   <div class="container-fluid mt-0 d-flex align-items-start justify-content-between pt-3">
     <div>
@@ -110,3 +117,27 @@
       </ng-container>
     </div>
   </div>
+
+
+  <ng-template #skeletonLoader>
+    <table id="example" class="table table-bordered com_table" style="width: 100%;">
+        <thead>
+            <tr>
+                <th style="width: 30px; border-left: 5px solid var(--orange-col); cursor: pointer;"
+                    ng-reflect-ng-class="[object Object]" class="active_arrow">
+                    <ngx-skeleton-loader appearance="line"></ngx-skeleton-loader>
+                  </th>
+                <th *ngFor="let col of columns" scope="col"><ngx-skeleton-loader appearance="line"></ngx-skeleton-loader></th>
+            </tr>
+        </thead>
+        <tbody>
+
+          <tr *ngFor="let _ of [].constructor(5); let i = index" [style.border-left]="'5px solid #' + WCColors[i % WCColors.length]">
+                
+                <td><ngx-skeleton-loader appearance="line"></ngx-skeleton-loader></td>
+                <td *ngFor="let col of columns"><ngx-skeleton-loader appearance="line"></ngx-skeleton-loader> </td>
+            </tr>
+    
+        </tbody>
+    </table>
+  </ng-template>
